--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "test": "jest --coverage"
   },
   "dependencies": {
-    "jest": "^29.7.0"
+    "jest": "^29.7.0",
+    "jsdom": "^23.0.1",
+    "marked": "^11.1.0"
   }
 }
