--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "test": "jest --coverage"
   },
   "dependencies": {
+    "axios": "^1.6.2",
     "jest": "^29.7.0",
     "jsdom": "^23.0.1",
     "marked": "^11.1.0"
